force-app/main/default/objects/TIS_Detail_Opp_Lead__c/TIS_Detail_Opp_Lead__c.object-meta.xml
<CustomObject>
    <description>Capture time state details of lead and opportunity</description>
    <label>Time and State Detail</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Time and State Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>