force-app/main/default/objects/TIS_Detail_Opp_Lead__c/fields/Days__c.field-meta.xml
<CustomField>
    <fullName>Days__c</fullName>
    <formula>if( ISNULL(Date_Time_Out__c),
FLOOR(NOW() - Date_Time_In__c),
FLOOR(Date_Time_Out__c - Date_Time_In__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>