force-app/main/default/objects/TIS_Detail_Opp_Lead__c/fields/Duration__c.field-meta.xml
<CustomField>
    <fullName>Duration__c</fullName>
    <formula>IF(Days__c&gt;0,TEXT( Days__c ) &amp; &apos; Days &apos; ,&apos;&apos;)&amp; TEXT ( MOD (Hrs__c , 24 ) ) &amp; &apos; Hours &apos; &amp; TEXT (Mins__c) &amp; &apos; Minutes&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Duration</label>
    <type>Text</type>
</CustomField>