force-app/main/default/objects/TIS_Detail_Opp_Lead__c/fields/Hrs__c.field-meta.xml
<CustomField>
    <fullName>Hrs__c</fullName>
    <formula>if( ISNULL(Date_Time_Out__c),
FLOOR((NOW() - Date_Time_In__c) * 24),
FLOOR((Date_Time_Out__c - Date_Time_In__c ) * 24))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hrs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>