force-app/main/default/objects/TIS_Detail_Opp_Lead__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Time and State Details</relationshipLabel>
    <relationshipName>Time_and_State_Details</relationshipName>
    <type>Lookup</type>
</CustomField>