force-app/main/default/objects/TIS_Detail_Opp_Lead__c/fields/Mins__c.field-meta.xml
<CustomField>
    <fullName>Mins__c</fullName>
    <formula>IF( ISNULL(Date_Time_Out__c ),
ROUND((((NOW() - Date_Time_In__c ) * 24) - FLOOR((NOW() - Date_Time_In__c ) * 24))*60 , 0 ),
ROUND((((Date_Time_Out__c - Date_Time_In__c ) * 24) - FLOOR((Date_Time_Out__c - Date_Time_In__c ) * 24))*60 , 0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mins</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>