force-app/main/default/objects/TIS_Detail_Opp_Lead__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Time and State Details</relationshipLabel>
    <relationshipName>Time_and_State_Details</relationshipName>
    <type>Lookup</type>
</CustomField>