force-app/main/default/objects/TIS_Detail_Opp_Lead__c/fields/Owner__c.field-meta.xml
<CustomField>
    <fullName>Owner__c</fullName>
    <description>name of the owner forlead/opportunty</description>
    <label>Owner</label>
    <length>50</length>
    <type>Text</type>
</CustomField>